--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,12 +6,27 @@
 
 <div class="container-articles">
     <div class="articles-main">
-        <app-big-card></app-big-card>
+        <app-big-card 
+        photoCover="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/7F51FA9F6CBD9F0C9B1394B1CC0A6A842D07091318674E234CD33CBF7C28CDC3/scale?width=1200&aspectRatio=1.78&format=jpeg"
+        cardTitle="Novo Homem de Ferro"
+        cardDescription="Marvel Studios anuncia novo ator para interpretar o Homem de Ferro"
+        >
+        </app-big-card>
     </div>
     <div class="articles-others">
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
+        <app-small-card
+        photoCover="https://disneyplusbrasil.com.br/wp-content/uploads/2021/07/Series-Marvel-Disney-Plus-1024x576.jpg"
+        cardTitle="oi"
+        ></app-small-card>
+        <app-small-card
+        photoCover="https://disneyplusbrasil.com.br/wp-content/uploads/2021/07/Series-Marvel-Disney-Plus-1024x576.jpg"
+        cardTitle="iai"
+        ></app-small-card>
+        <app-small-card
+        photoCover="https://disneyplusbrasil.com.br/wp-content/uploads/2021/07/Series-Marvel-Disney-Plus-1024x576.jpg"
+        cardTitle="ow"
+        ></app-small-card>
+        
     </div>
 </div>
 
@@ -20,7 +35,12 @@
 
 <div class="container-articles">
     <div class="articles-main">
-        <app-big-card></app-big-card>
+        <app-big-card 
+        photoCover="https://criticalhits.com.br/wp-content/uploads/2022/08/luffy-one-piece-1015.jpg"
+        cardTitle="Novo Yonkou Confirmado"
+        cardDescription="Luffy do Chapéu de Palha é o Joy Boy"
+        >
+        </app-big-card>
     </div>
     <div class="articles-others">
         <app-small-card></app-small-card>
