--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,18 +1,18 @@
 <div class="big-card-container">
   <div class="big-card-photo">
     <img 
-    src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/7F51FA9F6CBD9F0C9B1394B1CC0A6A842D07091318674E234CD33CBF7C28CDC3/scale?width=1200&aspectRatio=1.78&format=jpeg" 
+    src="{{photoCover}}" 
     alt=""
     height="200px"
     >
   </div>
   <div class="big-card-title">
-    <h1><a href="">Saiu a nova versão do Angular</a></h1>
+    <h1><a href="#">{{ cardTitle }}</a></h1>
   </div>
   <div class="big-card-description">
     <p>
-      <a href="">
-        oioioioioi oioioioi oioioioi
+      <a href="#">
+        {{ cardDescription }}
       </a>
     </p>
   </div>
