primeira parte completa

--- a/src/app/components/menu-title/menu-title.component.css
+++ b/src/app/components/menu-title/menu-title.component.css
@@ -3,6 +3,7 @@
     font-size: 135px;
     display: flex;
     justify-content: center;
+    text-transform: uppercase;
 }
 
 .menu-title-container hr {
