--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,50 +1,64 @@
-<header>
-    <app-menu-bar></app-menu-bar>
-</header>
+
 
 <app-menu-title></app-menu-title>
 
 <div class="container-articles">
     <div class="articles-main">
         <app-big-card 
-        photoCover="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/7F51FA9F6CBD9F0C9B1394B1CC0A6A842D07091318674E234CD33CBF7C28CDC3/scale?width=1200&aspectRatio=1.78&format=jpeg"
-        cardTitle="Novo Homem de Ferro"
-        cardDescription="Marvel Studios anuncia novo ator para interpretar o Homem de Ferro"
+        id="1"
+        photoCover="https://images8.alphacoders.com/124/1248279.jpg"
+        cardTitle="Novo Yonkou Confirmado"
+        cardDescription="Luffy do Chapéu de Palha acaba de virar o 4º Yonkou do Novo Mundo"
         >
         </app-big-card>
     </div>
     <div class="articles-others">
         <app-small-card
-        photoCover="https://disneyplusbrasil.com.br/wp-content/uploads/2021/07/Series-Marvel-Disney-Plus-1024x576.jpg"
-        cardTitle="oi"
+        id="2"
+        photoCover="https://pm1.narvii.com/6619/4d988bb5ba56050c292143e867b5b79d1540aac3_hq.jpg"
+        cardTitle="Dressrosa em choque"
         ></app-small-card>
         <app-small-card
-        photoCover="https://disneyplusbrasil.com.br/wp-content/uploads/2021/07/Series-Marvel-Disney-Plus-1024x576.jpg"
-        cardTitle="iai"
+        id="3"
+        photoCover="http://pm1.narvii.com/6421/3fe0437253b9ee539a6adff1cdff45c34c74460e_00.jpg"
+        cardTitle="Water 7 em choque"
         ></app-small-card>
         <app-small-card
-        photoCover="https://disneyplusbrasil.com.br/wp-content/uploads/2021/07/Series-Marvel-Disney-Plus-1024x576.jpg"
-        cardTitle="ow"
+        id="4"
+        photoCover="http://pm1.narvii.com/6345/8303ac0e4a231c0000c1aba9ed100b9e12e172c9_00.jpg"
+        cardTitle="Alabasta em choque"
         ></app-small-card>
         
     </div>
 </div>
 
-<h1>NOVIDADES</h1>
 <hr>
 
 <div class="container-articles">
     <div class="articles-main">
-        <app-big-card 
-        photoCover="https://criticalhits.com.br/wp-content/uploads/2022/08/luffy-one-piece-1015.jpg"
-        cardTitle="Novo Yonkou Confirmado"
-        cardDescription="Luffy do Chapéu de Palha é o Joy Boy"
+        <app-big-card
+        id="5"
+        photoCover="https://criticalhits.com.br/wp-content/uploads/2022/07/610be4681fcffb9930e1b0cecd02a321.jpg"
+        cardTitle="Exercíto Revolucionário avança"
+        cardDescription="Monkey D. Dragon, líder do infame Exercíto Revolucionário faz seu primeiro movimento para derrubar o Governo Mundial"
         >
         </app-big-card>
     </div>
     <div class="articles-others">
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
+        <app-small-card
+        id="6"
+        photoCover="https://pm1.narvii.com/7760/85d2b666d64030ef510012f167ae9d1fc4224e5ar4-736-368_00.jpg"
+        cardTitle="Arquipélago Sabaody em choque"
+        ></app-small-card>
+        <app-small-card
+        id="7"
+        photoCover="https://www.nerdsite.com.br/wp-content/uploads/2022/06/one-piece-wano.jpg"
+        cardTitle="País de Wano em choque"
+        ></app-small-card>
+        <app-small-card
+        id="8"
+        photoCover="https://criticalhits.com.br/wp-content/uploads/2020/01/Whole-Cake.png"
+        cardTitle="Whole Cake em choque"
+        ></app-small-card>
     </div>
 </div>
